# workflowDag

./: CMakeLists.txt  README.md
configuration/: service_configuration.proto
core/: CMakeLists.txt  OpOutput.h  graph.cc  graph.h  graph_instance.cc  graph_instance.h  graph_manager.cc  graph_manager.h  graph_wrapper.cc  graph_wrapper.h  op.cc  op.h
core/test/: CMakeLists.txt  sample.prototxt  test.cc
core/test/test_op/: ann_op.cc  ann_op.h  filter1_op.cc  filter1_op.h  filter2_op.cc  filter2_op.h  init1_op.cc  init1_op.h  init2_op.cc  init2_op.h  postann_op.cc  postann_op.h  postfilter_op.cc  postfilter_op.h  preann_op.cc  preann_op.h  prefilter_op.cc  prefilter_op.h  response_op.cc  response_op.h  udf_op.cc  udf_op.h
core/test/test_proto/: error_code.proto  hawking_embedding.proto  hawking_server.proto  node_content.proto  user_info.proto
op/: op.h
